[package]
name = "rlox_core"
version = "0.1.0"
authors = ["Willem Victor <wimpievictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "stack_peek"
harness = false

[dependencies]
criterion = "0.3"
flame = { version = "0.2", optional = true }
num-traits = "0.2"
num-derive = "0.3"
rlox-derive = { version = "*", path = "../rlox-derive" }

[dev-dependencies]
flame = "0.2"

[features]
# Add debug prints to VM instruction dispatch.
trace-execution = []
profile = ["flame"]
